# CodeBug

./: Dockerfile  README.md  baseline.py  env.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py
corpus/: __init__.py  bug_corpus.py
server/: __init__.py  app.py
static/: app.js  style.css
tasks/: __init__.py  task1_syntax.py  task2_logic.py  task3_security.py
