[project]
name = "codebug-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for training AI agents to detect and fix Python code bugs across syntax, logic, and security vulnerability domains."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "openai>=1.58.0",
    "bandit>=1.8.0",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "corpus", "tasks"]

[project.scripts]
server = "server.app:main"
codebug-env = "server.app:main"
